[package]
name = "tcp-udp-validator"
version = "1.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rbwork2024/tcp-udp-validator"
authors = ["Ryan Brue <ryan.brue@enovationcontrols.com>"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
